--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -1,78 +1,124 @@
-<h1 align=center>t2a06-spy-name.html</h1>
-<textarea id="myArea01" rows=4 cols=70>Hello how are you</textarea><br> 
 
-<input type=button value="encrypt" onclick="{
-   let myTemp = ''
-   myString = document.getElementById('myArea01').value.toLowerCase().split('')
-   for (let myLoop=0; myLoop < myString.length; myLoop++){
-      myTemp = myString[myLoop]
-      if (myString[myLoop] == 'a') {myTemp  = 'b'}
-      if (myString[myLoop] == 'b') {myTemp  = 'c'}
-      if (myString[myLoop] == 'c') {myTemp  = 'd'}
-      if (myString[myLoop] == 'd') {myTemp  = 'e'}
-      if (myString[myLoop] == 'e') {myTemp  = 'f'}
-      if (myString[myLoop] == 'f') {myTemp  = 'g'}
-      if (myString[myLoop] == 'g') {myTemp  = 'h'}
-      if (myString[myLoop] == 'h') {myTemp  = 'i'}
-      if (myString[myLoop] == 'i') {myTemp  = 'j'}
-      if (myString[myLoop] == 'j') {myTemp  = 'k'}
-      if (myString[myLoop] == 'k') {myTemp  = 'l'}
-      if (myString[myLoop] == 'l') {myTemp  = 'm'}
-      if (myString[myLoop] == 'm') {myTemp  = 'n'}
-      if (myString[myLoop] == 'n') {myTemp  = 'o'}
-      if (myString[myLoop] == 'o') {myTemp  = 'p'}
-      if (myString[myLoop] == 'p') {myTemp  = 'q'}
-      if (myString[myLoop] == 'q') {myTemp  = 'r'}
-      if (myString[myLoop] == 'r') {myTemp  = 's'}
-      if (myString[myLoop] == 's') {myTemp  = 't'}
-      if (myString[myLoop] == 't') {myTemp  = 'u'}
-      if (myString[myLoop] == 'u') {myTemp  = 'v'}
-      if (myString[myLoop] == 'v') {myTemp  = 'w'}
-      if (myString[myLoop] == 'w') {myTemp  = 'x'}
-      if (myString[myLoop] == 'x') {myTemp  = 'y'}
-      if (myString[myLoop] == 'y') {myTemp  = 'z'}
-      if (myString[myLoop] == 'z') {myTemp  = 'a'}
-      myString[myLoop] = myTemp
+
+<body id="myBody" style="background-repeat:repeat; background-size: 80%" background="myBackground01.jpg" onload="{myAuto()}" onclick="{
+
+      document.getElementById('myImg01').style.top = parseInt(document.getElementById('myImg01').style.top) + myJump + 'px'
+
+      myDoGravity()
+}">
+
+<h1 align=center><font color=red>T4A04 Maze by Fred</font></h1>
+
+
+<script>
+
+   // global variables here
+   let myGlobalX = 0
+   let myClock
+   let myGravity = 0.03
+   let myJump = -40;
+   let myHorizontalJump = 5;
+   let myVertical;
+   let myHorizontal;
+
+   // global functions here
+function myHitOther(my1,my2){
+   left1   = parseInt(document.getElementById(my1).style.left)
+   right1  = left1 + parseInt(document.getElementById(my1).style.width)
+   top1    = parseInt(document.getElementById(my1).style.top)   
+   bottom1 = top1   + parseInt(document.getElementById(my1).style.height)
+   left2   = parseInt(document.getElementById(my2).style.left)
+   right2  = left2 + parseInt(document.getElementById(my2).style.width)
+   top2    = parseInt(document.getElementById(my2).style.top)   
+   bottom2 = top2   + parseInt(document.getElementById(my2).style.height)
+   if ((right1  >=  left2  ) &&      	   
+       (bottom1 >=  top2   ) &&
+       (left1   <=  right2 ) &&
+       (top1    <=  bottom2) ){
+       return true
    }
-   document.getElementById('myArea02').value = myString.join('')
+}
+
+function myDoGravity(){
+     myVertical = parseInt(document.getElementById('myImg01').style.top) + 2
+     myHorizontal = parseInt(document.getElementById('myImg01').style.left) 
+     document.getElementById('myImg01').style.left = myHorizontal + myHorizontalJump
+     document.getElementById('myImg01').style.top = myVertical + (myVertical * myGravity) + 'px'
+}
+
+
+
+   // global functions here
+function myAuto(){
+  clearInterval(myClock)
+  myTimer02 = setInterval(function(){
+      myDoGravity()
+      myCheckHit()     // checks for all collisions
+  }, 100)
+
+}
+
+
+function myCheckHit(){
+
+   if ( myHitOther('myImg01','myImg02') ){
+       //alert('you lose')
+      document.getElementById('myImg01').style.left = '20px'
+      document.getElementById('myImg01').style.top = '60px'
+   }   
+   
+   if ( myHitOther('myImg01','myImg03') ){
+       //alert('you lose')
+      document.getElementById('myImg01').style.left = '20px'
+      document.getElementById('myImg01').style.top = '60px'
+   }   
+   
+
+
+   // YOU WIN and go to next level!
+
+   if ( myHitOther('myImg01','myImg04') ){
+       alert('You Win, now go to the next level')
+      document.getElementById('myImg01').style.left = '20px'
+      location = 'https://www.google.ca'
+   }
+
+   // more if statements here
+
+}
+
+
+</script>
+
+
+
+
+<input type=button value="Auto Background Left" onclick="{
+  clearInterval(myClock)
+  let myTemp = '100px 0px'
+  myClock = setInterval(function(){
+      myGlobalX -= 5
+      myTemp =  myGlobalX + 'px 0px'
+      document.getElementById('myBody').style.backgroundPosition = myTemp
+  }, 100)
+    
+}">
+
+
+<input type=button value="Right" onTouchStart="{this.click(); event.preventDefault();}" onclick="{
+  document.getElementById('myImg01').style.left = parseInt(document.getElementById('myImg01').style.left) + 10 + 'px'
+  myCheckHit()     // checks for all collisions
+}">
+
+<input type=button value="Down" onTouchStart="{this.click(); event.preventDefault();}" onclick="{
+  document.getElementById('myImg01').style.top = parseInt(document.getElementById('myImg01').style.top) + 10 + 'px'
+  myCheckHit()     // checks for all collisions
 }"><br><br>
 
-<textarea id="myArea02" rows=4 cols=70></textarea><br> 
 
-<input type=button value="decrypt" onclick="{
-   let myTemp = ''
-   myString = document.getElementById('myArea02').value.toLowerCase().split('')
-   for (let myLoop=0; myLoop < myString.length; myLoop++){
-      myTemp = myString[myLoop]
-      if (myString[myLoop] == 'b') {myTemp  = 'a'}
-      if (myString[myLoop] == 'c') {myTemp  = 'b'}
-      if (myString[myLoop] == 'd') {myTemp  = 'c'}
-      if (myString[myLoop] == 'e') {myTemp  = 'd'}
-      if (myString[myLoop] == 'f') {myTemp  = 'e'}
-      if (myString[myLoop] == 'g') {myTemp  = 'f'}
-      if (myString[myLoop] == 'h') {myTemp  = 'g'}
-      if (myString[myLoop] == 'i') {myTemp  = 'h'}
-      if (myString[myLoop] == 'j') {myTemp  = 'i'}
-      if (myString[myLoop] == 'k') {myTemp  = 'j'}
-      if (myString[myLoop] == 'l') {myTemp  = 'k'}
-      if (myString[myLoop] == 'm') {myTemp  = 'l'}
-      if (myString[myLoop] == 'n') {myTemp  = 'm'}
-      if (myString[myLoop] == 'o') {myTemp  = 'n'}
-      if (myString[myLoop] == 'p') {myTemp  = 'o'}
-      if (myString[myLoop] == 'q') {myTemp  = 'p'}
-      if (myString[myLoop] == 'r') {myTemp  = 'q'}
-      if (myString[myLoop] == 's') {myTemp  = 'r'}
-      if (myString[myLoop] == 't') {myTemp  = 's'}
-      if (myString[myLoop] == 'u') {myTemp  = 't'}
-      if (myString[myLoop] == 'v') {myTemp  = 'u'}
-      if (myString[myLoop] == 'w') {myTemp  = 'v'}
-      if (myString[myLoop] == 'x') {myTemp  = 'w'}
-      if (myString[myLoop] == 'y') {myTemp  = 'x'}
-      if (myString[myLoop] == 'z') {myTemp  = 'y'}
-      if (myString[myLoop] == 'a') {myTemp  = 'z'}
-      myString[myLoop] = myTemp
-   }
-   document.getElementById('myArea03').value = myString.join('')
-}"><br><br>
 
-<textarea id="myArea03" rows=4 cols=70></textarea><br>
+
+<img id="myImg01" src="myImgNew.jpg"  style="position:absolute; width:100px; height:80px; left: 50px; top:190px;">
+<img id="myImg02" src="myImgNew.jpg"  style="position:absolute; width:10px; height:200px; left:350px; top:90px;">
+<img id="myImg03" src="myImgNew.jpg"  style="position:absolute; width:200px; height:10px; left:500px; top:400px;">
+<img id="myImg04" src="myImgNew.jpg"  style="position:absolute; width:100px; height:80px; left:800px; top:400px;">
