--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -5,14 +5,14 @@
 <script>
    // Global variables
    let myClock;
-   let myGravity = 0.5; // Gravity force
+   let myGravity = 3; // Gravity force
    let myJumpStrength = -10; // Jump strength
    let myVerticalVelocity = 0; // Current vertical velocity
-   let isJumping = false; // To check if the character is jumping
+   let isJumping = true; // To check if the character is jumping
    let score = 0; // Score variable
    let gameOver = false; // Game over state
    const pipeWidth = 50; // Width of the pipes
-   const pipeGap = 150; // Gap between pipes
+   const pipeGap = 450; // Gap between pipes
    const pipeFrequency = 2000; // Frequency of pipe generation in milliseconds
 
    // Initialize the game
