--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -11,8 +11,8 @@
    let score = 0; // Score variable
    let gameOver = false; // Game over state
    const pipeWidth = 50; // Width of the pipes
-   const pipeGap = 2500; // Increased gap between pipes
-   const pipeFrequency = 1; // Frequency of pipe generation in milliseconds
+   const pipeGap = 240; // Gap between pipes (3 times the player height of 80 pixels)
+   const pipeFrequency = 2000; // Frequency of pipe generation in milliseconds
 
    // Initialize the game
    function myAuto() {
