--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -6,9 +6,7 @@
     <title>Bouncing Image</title>
     <style>
         body {
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-image: url('https://wallpapercave.com/wp/wp14803412.webp');
+            background: linear-gradient(to bottom, darkblue, red); /* Dark blue to red gradient */
             overflow: hidden; /* Prevent scrollbars */
             font-family: Arial, sans-serif; /* Set a modern font */
             color: #fff; /* Set text color to white for better contrast */
