--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -73,7 +73,7 @@
         <input type="range" id="speedSlider" min="1" max="20" value="3" step="1">
     </div>
 
-    <img id="myImg01" src="https://i.ibb.co/D7t7GPQ/OIP-8.jpg" title="Bouncing Ball"> <!-- Updated image source -->
+    <img id="myImg01" src="<a href="https://imgbb.com/"><img src="https://i.ibb.co/sF2F5pq/OIP-8.jpg" alt="OIP-8" border="0"></a><br /><a target='_blank' href='https://nonprofitlight.com/wi/racine/woof-gang-rescue-inc'>woof gang rescue</a><br />" title="Bouncing Ball"> <!-- Updated image source -->
 
     <audio id="collisionSound" src="https://www.soundjay.com/button/beep-07.wav" preload="auto"></audio>
 
