--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -39,7 +39,7 @@
         }
         img {
             position: absolute;
-            width: 100px; /* Set width for the ball image */
+            width: 100px; /* Adjust width as needed */
             height: auto; /* Maintain aspect ratio */
             transition: transform 0.3s; /* Optionally add transition for smoother movement */
         }
@@ -73,7 +73,7 @@
         <input type="range" id="speedSlider" min="1" max="20" value="3" step="1">
     </div>
 
-    <img id="myImg01" src="https://i.ibb.co/D7t7GPQ/OIP-8.jpg" title="Bouncing Ball"> <!-- Updated image source -->
+    <img id="myImg01" src="https://i.ibb.co/HVrnC05/Spheal-Pokemon-PNG-Transparent-Picture.png" title="Bouncing Spheal"> <!-- Updated image source -->
 
     <script>
         // Global variables
