--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bouncing Image</title>
+    <title>Bouncing Image with Blocks</title>
     <style>
         body {
             background: linear-gradient(to bottom, darkblue, red); /* Dark blue to red gradient */
@@ -47,6 +47,13 @@
             left: 50px;
             top: 190px;
         }
+        .block {
+            position: absolute;
+            width: 50px; /* Width of the block */
+            height: 50px; /* Height of the block */
+            background-color: rgba(0, 255, 0, 0.7); /* Green color for blocks */
+            border: 2px solid #fff; /* White border for visibility */
+        }
         .slider-container {
             text-align: center; /* Center the slider */
             margin: 20px 0; /* Add some space above and below */
@@ -75,9 +82,17 @@
 
     <img id="myImg01" src="https://i.ibb.co/HVrnC05/Spheal-Pokemon-PNG-Transparent-Picture.png" title="Bouncing Spheal"> <!-- Updated image source -->
 
+    <!-- Blocks -->
+    <div class="block" style="top: 100px; left: 200px;"></div>
+    <div class="block" style="top: 300px; left: 400px;"></div>
+    <div class="block" style="top: 500px; left: 100px;"></div>
+    <div class="block" style="top: 400px; left: 600px;"></div>
+    <div class="block" style="top: 200px; left: 300px;"></div>
+
     <script>
         // Global variables
         const img01 = document.getElementById('myImg01');
+        const blocks = document.querySelectorAll('.block');
         let verticalDirection = 1; // 1 for down, -1 for up
         let horizontalDirection = 1; // 1 for right, -1 for left
         let verticalSpeed = 3; // Initial speed of vertical movement
@@ -99,8 +114,24 @@
             img01.style.top = (parseInt(img01.style.top) + (verticalSpeed * verticalDirection)) + 'px';
             img01.style.left = (parseInt(img01.style.left) + (horizontalSpeed * horizontalDirection)) + 'px';
 
-            // Check if ball hits top or bottom of the window
+            // Check for collisions with blocks
             const rect = img01.getBoundingClientRect();
+            blocks.forEach(block => {
+                const blockRect = block.getBoundingClientRect();
+                if (rect.left < blockRect.right &&
+                    rect.right > blockRect.left &&
+                    rect.top < blockRect.bottom &&
+                    rect.bottom > blockRect.top) {
+                    // Collision detected
+                    if (Math.abs(rect.bottom - blockRect.top) < 10 || Math.abs(rect.top - blockRect.bottom) < 10) {
+                        verticalDirection *= -1; // Reverse vertical direction
+                    } else {
+                        horizontalDirection *= -1; // Reverse horizontal direction
+                    }
+                }
+            });
+
+            // Check if ball hits top or bottom of the window
             if (rect.top <= 0 || rect.bottom >= window.innerHeight) {
                 verticalDirection *= -1; // Reverse vertical direction
             }
