--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -88,6 +88,15 @@
     <div class="block" style="top: 500px; left: 100px;"></div>
     <div class="block" style="top: 400px; left: 600px;"></div>
     <div class="block" style="top: 200px; left: 300px;"></div>
+    <div class="block" style="top: 50px; left: 50px;"></div>
+    <div class="block" style="top: 150px; left: 350px;"></div>
+    <div class="block" style="top: 250px; left: 650px;"></div>
+    <div class="block" style="top: 350px; left: 250px;"></div>
+    <div class="block" style="top: 450px; left: 450px;"></div>
+    <div class="block" style="top: 550px; left: 300px;"></div>
+    <div class="block" style="top: 300px; left: 50px;"></div>
+    <div class="block" style="top: 400px; left: 300px;"></div>
+    <div class="block" style="top: 100px; left: 500px;"></div>
 
     <script>
         // Global variables
