--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -82,21 +82,21 @@
 
     <img id="myImg01" src="https://i.ibb.co/HVrnC05/Spheal-Pokemon-PNG-Transparent-Picture.png" title="Bouncing Spheal"> <!-- Updated image source -->
 
-    <!-- Blocks -->
-    <div class="block" style="top: 100px; left: 200px;"></div>
-    <div class="block" style="top: 300px; left: 400px;"></div>
-    <div class="block" style="top: 500px; left: 100px;"></div>
-    <div class="block" style="top: 400px; left: 600px;"></div>
-    <div class="block" style="top: 200px; left: 300px;"></div>
+    <!-- Blocks scattered around the page -->
     <div class="block" style="top: 50px; left: 50px;"></div>
-    <div class="block" style="top: 150px; left: 350px;"></div>
-    <div class="block" style="top: 250px; left: 650px;"></div>
-    <div class="block" style="top: 350px; left: 250px;"></div>
-    <div class="block" style="top: 450px; left: 450px;"></div>
-    <div class="block" style="top: 550px; left: 300px;"></div>
-    <div class="block" style="top: 300px; left: 50px;"></div>
-    <div class="block" style="top: 400px; left: 300px;"></div>
+    <div class="block" style="top: 100px; left: 300px;"></div>
+    <div class="block" style="top: 200px; left: 600px;"></div>
+    <div class="block" style="top: 300px; left: 100px;"></div>
+    <div class="block" style="top: 400px; left: 400px;"></div>
+    <div class="block" style="top: 500px; left: 200px;"></div>
+    <div class="block" style="top: 550px; left: 600px;"></div>
+    <div class="block" style="top: 350px; left: 700px;"></div>
+    <div class="block" style="top: 150px; left: 450px;"></div>
+    <div class="block" style="top: 250px; left: 300px;"></div>
+    <div class="block" style="top: 50px; left: 700px;"></div>
+    <div class="block" style="top: 450px; left: 50px;"></div>
     <div class="block" style="top: 100px; left: 500px;"></div>
+    <div class="block" style="top: 300px; left: 650px;"></div>
 
     <script>
         // Global variables
@@ -189,5 +189,4 @@
         // Event listener for Reset button
         document.getElementById('resetButton').addEventListener('click', resetImage);
     </script>
-</body>
-</html>
+</
