--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -82,21 +82,22 @@
 
     <img id="myImg01" src="https://i.ibb.co/HVrnC05/Spheal-Pokemon-PNG-Transparent-Picture.png" title="Bouncing Spheal"> <!-- Updated image source -->
 
-    <!-- Blocks scattered around the page -->
-    <div class="block" style="top: 500px; left: 570px;"></div>
+    <!-- Blocks scattered farther apart -->
+    <div class="block" style="top: 50px; left: 50px;"></div>
     <div class="block" style="top: 100px; left: 300px;"></div>
-    <div class="block" style="top: 400px; left: 600px;"></div>
-    <div class="block" style="top: 380px; left: 300px;"></div>
-    <div class="block" style="top: 100px; left: 400px;"></div>
-    <div class="block" style="top: 500px; left: 900px;"></div>
+    <div class="block" style="top: 200px; left: 600px;"></div>
+    <div class="block" style="top: 400px; left: 100px;"></div>
+    <div class="block" style="top: 500px; left: 400px;"></div>
     <div class="block" style="top: 550px; left: 700px;"></div>
     <div class="block" style="top: 350px; left: 700px;"></div>
     <div class="block" style="top: 150px; left: 450px;"></div>
-    <div class="block" style="top: 250px; left: 900px;"></div>
-    <div class="block" style="top: 500px; left: 700px;"></div>
-    <div class="block" style="top: 450px; left: 500px;"></div>
+    <div class="block" style="top: 250px; left: 300px;"></div>
+    <div class="block" style="top: 50px; left: 700px;"></div>
+    <div class="block" style="top: 450px; left: 50px;"></div>
     <div class="block" style="top: 100px; left: 500px;"></div>
     <div class="block" style="top: 300px; left: 650px;"></div>
+    <div class="block" style="top: 600px; left: 300px;"></div>
+    <div class="block" style="top: 300px; left: 100px;"></div>
 
     <script>
         // Global variables
@@ -187,6 +188,4 @@
         });
 
         // Event listener for Reset button
-        document.getElementById('resetButton').addEventListener('click', resetImage);
-    </script>
-</
+        document.getElementById('resetButton').add
