--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,7 @@ Aden
         <li><a href="t2a25-storyboard-Aden.html">t2a25-storyboard-Aden.html</a></li>
            <li><a href="t2a26mlsysbook-ai-aden.html">t2a26mlsysbook-ai-aden.html</a></li>
          <li><a href="con1">con1</a></li>
+       <li><a href="t2a28-bounce-aden.html">t2a28-bounce-aden.html</a></li>
          <li><a href="Final-project.html">Final-project.html</a></li>
     </ul>
 
